--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,11 @@
     padding: 7px 15px;
     border-radius: 20px;
 } */
+.noto-sans-hanunoo-regular {
+  font-family: "Allura", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
 
 .active {
     background-color: #00a63e;
