--- a/src/index.css
+++ b/src/index.css
@@ -40,3 +40,13 @@
     font-weight: 700;
     font-style: normal;
   }
+
+
+  /* Hide scrollbar */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
+}
