--- a/src/index.css
+++ b/src/index.css
@@ -114,7 +114,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background: radial-gradient(#00f2ff33, transparent), #0f172a;
+  background: radial-gradient(#36454F, transparent), #36454F;
   overflow: hidden;
   z-index: 0;
 }
@@ -124,7 +124,7 @@
   position: absolute;
   width: 200%;
   height: 200%;
-  background-image: radial-gradient(circle, #0ff 10%, transparent 11%);
+  background-image: radial-gradient(circle, white 10%, transparent 11%);
   background-size: 50px 50px;
   animation: moveCircles 20s linear infinite;
   opacity: 0.08;
